--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2016 - Till date</h4>
-                                    <h4 class="subheading">Lead Developer - Salesforce</h4>
+                                    <h4 class="subheading">Full stack developer - Nintex</h4>
 									<h4 class="subheading">Melbourne</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -483,12 +483,12 @@
                 </div>
                 <div class="col-md-3">
                     <span class="fa-stack fa-3x">
-                        <a href="https://github.com/abhijeetahuja/abhijeetahuja.github.io/raw/master/abhijeet_ahuja.pdf">
+                        <a href="https://github.com/abhijeetahuja/abhijeetahuja.github.io/raw/master/resume.pdf">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-file-pdf-o fa-stack-1x fa-inverse"></i>
                         </a>
                     </span>
-                    <h4 class="service-heading"><a href="https://github.com/abhijeetahuja/abhijeetahuja.github.io/raw/master/abhijeet_ahuja.pdf">Resume</a></h4>
+                    <h4 class="service-heading"><a href="https://github.com/abhijeetahuja/abhijeetahuja.github.io/raw/master/resume.pdf">Resume</a></h4>
                 </div>
             </div>
         </div>
